Fix MOJ sort icon causing content to overflow
The MOJ sort icon is positioned using absolute positioning, with a slight negative position on the container (`right: -1px`), which means if the last column is sortable, the table will always slightly overflow the parent container. This means that when using an `overflow:auto` property on the container to ensure the table does not exceed the width of the page on smaller screens, the horizontal scrollbar will always appear–even if it does not appear to be overflowing.

Have provided a slight tweak to the sort icons when used within this container:
- remove negative right-hand positioning
- add additional padding on the right hand side of the button to replace the spacing between title and icon provided by the negative positioning.

--- a/DfE.FindInformationAcademiesTrusts/assets/sass/components/_table.scss
+++ b/DfE.FindInformationAcademiesTrusts/assets/sass/components/_table.scss
@@ -1,8 +1,21 @@
 .app-table-container {
   overflow: auto;
 
-  // Fix sort icons provided by MOJ design system overlapping slightly on Chrome and Edge
-  [aria-sort] button::before {
-    top: 11px;
+  [aria-sort] button {
+    // increase padding slightly to add space between the column header and the sort icon
+    // as we have removed the negative position below
+    padding-right: 1rem;
+
+    // Fix sort icons provided by MOJ design system overlapping slightly on Chrome and Edge
+    &::before {
+      top: 11px;
+    }
+
+    // Fix sort icons causing content to always overflow container
+    // this causes horizontal scroll to always visible when using overflow:auto
+    &::before,
+    &::after {
+      right: 0;
+    }
   }
 }
